// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer customization should be supported 1`] = `
"<div class=\\"wrapper right test-class  wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\" width=\\"100px\\"><div tabindex=\\"0\\" class=\\"hide-tab start\\" aria-hidden=\\"true\\"></div><h2 class=\\"\\">Modal</h2><style>
        h2 {
          line-height: 1.6;
          font-weight: normal;
          text-align: center;
          display: inline-flex;
          flex-shrink: 0;
          justify-content: center;
          align-items: center;
          word-break: break-word;
          text-transform: capitalize;
          font-size: calc(1.5 * 16px);
          color: #000;
          width: auto;
          height: auto;
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style><div tabindex=\\"0\\" class=\\"hide-tab end\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            max-width: 100%;
            vertical-align: middle;
            overflow: auto;
            display: flex;
            flex-direction: column;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: calc(3 * 5px);
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(100%, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.6, 0.1, 1);
            font-size: calc(1 * 16px);
            --modal-wrapper-padding-left: calc(1.3125 * 16px);
            --modal-wrapper-padding-right: calc(1.3125 * 16px);
            padding: calc(1.3125 * 16px) var(--modal-wrapper-padding-right)
              calc(1.3125 * 16px) var(--modal-wrapper-padding-left);
            margin: 0 0 0 0;
          }
          .top,
          .bottom {
            width: 100px;
            height: auto;
          }
          .left,
          .right {
            width: 100px;
            height: 100%;
          }
          .top {
            bottom: auto;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
          }
          .left {
            right: auto;
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }
          .bottom {
            top: auto;
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
          .right {
            left: auto;
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(100%, 0, 0);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0, 0, 0);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.2, 0.1, 1);
          }
          .wrapper-leave-active {
            opacity: 0.4;
            transform: translate3d(100%, 0, 0);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div>"
`;

exports[`Drawer should render correctly 1`] = `
"<div class=\\"backdrop  backdrop-wrapper-enter\\"><div class=\\"layer\\"></div><div class=\\"content\\"><div class=\\"wrapper right   wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab start\\" aria-hidden=\\"true\\"></div><h2 class=\\"\\">Drawer</h2><style>
        h2 {
          line-height: 1.6;
          font-weight: normal;
          text-align: center;
          display: inline-flex;
          flex-shrink: 0;
          justify-content: center;
          align-items: center;
          word-break: break-word;
          text-transform: capitalize;
          font-size: calc(1.5 * 16px);
          color: #000;
          width: auto;
          height: auto;
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style><p class=\\"\\">This is a drawer</p><style>
        p {
          font-weight: normal;
          display: inline-block;
          text-align: center;
          word-break: break-word;
          text-transform: uppercase;
          color: #666;
          font-size: calc(0.875 * 16px);
          line-height: 1.5em;
          width: auto;
          height: 1.5em;
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style><div class=\\"content \\"><p>Some content contained within the drawer.</p></div><style>
        .content {
          position: relative;
          text-align: left;
          font-size: calc(1 * 16px);
          width: auto;
          height: auto;
          padding: calc(1.3125 * 16px) calc(1.3125 * 16px) calc(0.6625 * 16px)
            calc(1.3125 * 16px);
          margin: 0
            calc(var(--modal-wrapper-padding-right) * -1)
            0
            calc(var(--modal-wrapper-padding-left) * -1);
        }

        .content > :global(*:first-child) {
          margin-top: 0;
        }

        .content > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style><div tabindex=\\"0\\" class=\\"hide-tab end\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            max-width: 100%;
            vertical-align: middle;
            overflow: auto;
            display: flex;
            flex-direction: column;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: calc(3 * 5px);
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(100%, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.6, 0.1, 1);
            font-size: calc(1 * 16px);
            --modal-wrapper-padding-left: calc(1.3125 * 16px);
            --modal-wrapper-padding-right: calc(1.3125 * 16px);
            padding: calc(1.3125 * 16px) var(--modal-wrapper-padding-right)
              calc(1.3125 * 16px) var(--modal-wrapper-padding-left);
            margin: 0 0 0 0;
          }
          .top,
          .bottom {
            width: 100%;
            height: auto;
          }
          .left,
          .right {
            width: auto;
            height: 100%;
          }
          .top {
            bottom: auto;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
          }
          .left {
            right: auto;
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }
          .bottom {
            top: auto;
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
          .right {
            left: auto;
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(100%, 0, 0);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0, 0, 0);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.2, 0.1, 1);
          }
          .wrapper-leave-active {
            opacity: 0.4;
            transform: translate3d(100%, 0, 0);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div></div><style>
            .backdrop {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              overflow: auto;
              z-index: 1000;
              -webkit-overflow-scrolling: touch;
              box-sizing: border-box;
              text-align: center;
            }

            .content {
              position: relative;
              z-index: 1001;
              outline: none;
              max-width: 90%;
              width: 100%;
              margin: 20px auto;
              vertical-align: middle;
              display: inline-block;
            }

            .backdrop:before {
              display: inline-block;
              width: 0;
              height: 100%;
              vertical-align: middle;
              content: '';
            }

            .layer {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              width: 100%;
              height: 100%;
              opacity: 0.25;
              background-color: black;
              transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
              pointer-events: none;
              z-index: 1000;
            }

            .backdrop-wrapper-enter .layer {
              opacity: 0;
            }

            .backdrop-wrapper-enter-active .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave-active .layer {
              opacity: 0;
            }
          </style></div>"
`;

exports[`Drawer should work correctly with different placement 1`] = `
"<div class=\\"backdrop  backdrop-wrapper-enter\\"><div class=\\"layer\\"></div><div class=\\"content\\"><div class=\\"wrapper top   wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab start\\" aria-hidden=\\"true\\"></div><p>Some content contained within the drawer.</p><div tabindex=\\"0\\" class=\\"hide-tab end\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            max-width: 100%;
            vertical-align: middle;
            overflow: auto;
            display: flex;
            flex-direction: column;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: calc(3 * 5px);
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(0, -100%, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.6, 0.1, 1);
            font-size: calc(1 * 16px);
            --modal-wrapper-padding-left: calc(1.3125 * 16px);
            --modal-wrapper-padding-right: calc(1.3125 * 16px);
            padding: calc(1.3125 * 16px) var(--modal-wrapper-padding-right)
              calc(1.3125 * 16px) var(--modal-wrapper-padding-left);
            margin: 0 0 0 0;
          }
          .top,
          .bottom {
            width: 100%;
            height: auto;
          }
          .left,
          .right {
            width: auto;
            height: 100%;
          }
          .top {
            bottom: auto;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
          }
          .left {
            right: auto;
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }
          .bottom {
            top: auto;
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
          .right {
            left: auto;
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(0, -100%, 0);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0, 0, 0);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.2, 0.1, 1);
          }
          .wrapper-leave-active {
            opacity: 0.4;
            transform: translate3d(0, -100%, 0);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div></div><style>
            .backdrop {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              overflow: auto;
              z-index: 1000;
              -webkit-overflow-scrolling: touch;
              box-sizing: border-box;
              text-align: center;
            }

            .content {
              position: relative;
              z-index: 1001;
              outline: none;
              max-width: 90%;
              width: 100%;
              margin: 20px auto;
              vertical-align: middle;
              display: inline-block;
            }

            .backdrop:before {
              display: inline-block;
              width: 0;
              height: 100%;
              vertical-align: middle;
              content: '';
            }

            .layer {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              width: 100%;
              height: 100%;
              opacity: 0.25;
              background-color: black;
              transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
              pointer-events: none;
              z-index: 1000;
            }

            .backdrop-wrapper-enter .layer {
              opacity: 0;
            }

            .backdrop-wrapper-enter-active .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave-active .layer {
              opacity: 0;
            }
          </style></div>"
`;

exports[`Drawer should work correctly with different placement 2`] = `
"<div class=\\"backdrop  backdrop-wrapper-enter\\"><div class=\\"layer\\"></div><div class=\\"content\\"><div class=\\"wrapper right   wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab start\\" aria-hidden=\\"true\\"></div><p>Some content contained within the drawer.</p><div tabindex=\\"0\\" class=\\"hide-tab end\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            max-width: 100%;
            vertical-align: middle;
            overflow: auto;
            display: flex;
            flex-direction: column;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: calc(3 * 5px);
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(100%, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.6, 0.1, 1);
            font-size: calc(1 * 16px);
            --modal-wrapper-padding-left: calc(1.3125 * 16px);
            --modal-wrapper-padding-right: calc(1.3125 * 16px);
            padding: calc(1.3125 * 16px) var(--modal-wrapper-padding-right)
              calc(1.3125 * 16px) var(--modal-wrapper-padding-left);
            margin: 0 0 0 0;
          }
          .top,
          .bottom {
            width: 100%;
            height: auto;
          }
          .left,
          .right {
            width: auto;
            height: 100%;
          }
          .top {
            bottom: auto;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
          }
          .left {
            right: auto;
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }
          .bottom {
            top: auto;
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
          .right {
            left: auto;
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(100%, 0, 0);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0, 0, 0);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.2, 0.1, 1);
          }
          .wrapper-leave-active {
            opacity: 0.4;
            transform: translate3d(100%, 0, 0);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div></div><style>
            .backdrop {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              overflow: auto;
              z-index: 1000;
              -webkit-overflow-scrolling: touch;
              box-sizing: border-box;
              text-align: center;
            }

            .content {
              position: relative;
              z-index: 1001;
              outline: none;
              max-width: 90%;
              width: 100%;
              margin: 20px auto;
              vertical-align: middle;
              display: inline-block;
            }

            .backdrop:before {
              display: inline-block;
              width: 0;
              height: 100%;
              vertical-align: middle;
              content: '';
            }

            .layer {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              width: 100%;
              height: 100%;
              opacity: 0.25;
              background-color: black;
              transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
              pointer-events: none;
              z-index: 1000;
            }

            .backdrop-wrapper-enter .layer {
              opacity: 0;
            }

            .backdrop-wrapper-enter-active .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave-active .layer {
              opacity: 0;
            }
          </style></div>"
`;

exports[`Drawer should work correctly with different placement 3`] = `
"<div class=\\"backdrop  backdrop-wrapper-enter\\"><div class=\\"layer\\"></div><div class=\\"content\\"><div class=\\"wrapper bottom   wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab start\\" aria-hidden=\\"true\\"></div><p>Some content contained within the drawer.</p><div tabindex=\\"0\\" class=\\"hide-tab end\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            max-width: 100%;
            vertical-align: middle;
            overflow: auto;
            display: flex;
            flex-direction: column;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: calc(3 * 5px);
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(0, 100%, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.6, 0.1, 1);
            font-size: calc(1 * 16px);
            --modal-wrapper-padding-left: calc(1.3125 * 16px);
            --modal-wrapper-padding-right: calc(1.3125 * 16px);
            padding: calc(1.3125 * 16px) var(--modal-wrapper-padding-right)
              calc(1.3125 * 16px) var(--modal-wrapper-padding-left);
            margin: 0 0 0 0;
          }
          .top,
          .bottom {
            width: 100%;
            height: auto;
          }
          .left,
          .right {
            width: auto;
            height: 100%;
          }
          .top {
            bottom: auto;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
          }
          .left {
            right: auto;
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }
          .bottom {
            top: auto;
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
          .right {
            left: auto;
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(0, 100%, 0);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0, 0, 0);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.2, 0.1, 1);
          }
          .wrapper-leave-active {
            opacity: 0.4;
            transform: translate3d(0, 100%, 0);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div></div><style>
            .backdrop {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              overflow: auto;
              z-index: 1000;
              -webkit-overflow-scrolling: touch;
              box-sizing: border-box;
              text-align: center;
            }

            .content {
              position: relative;
              z-index: 1001;
              outline: none;
              max-width: 90%;
              width: 100%;
              margin: 20px auto;
              vertical-align: middle;
              display: inline-block;
            }

            .backdrop:before {
              display: inline-block;
              width: 0;
              height: 100%;
              vertical-align: middle;
              content: '';
            }

            .layer {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              width: 100%;
              height: 100%;
              opacity: 0.25;
              background-color: black;
              transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
              pointer-events: none;
              z-index: 1000;
            }

            .backdrop-wrapper-enter .layer {
              opacity: 0;
            }

            .backdrop-wrapper-enter-active .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave-active .layer {
              opacity: 0;
            }
          </style></div>"
`;

exports[`Drawer should work correctly with different placement 4`] = `
"<div class=\\"backdrop  backdrop-wrapper-enter\\"><div class=\\"layer\\"></div><div class=\\"content\\"><div class=\\"wrapper left   wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab start\\" aria-hidden=\\"true\\"></div><p>Some content contained within the drawer.</p><div tabindex=\\"0\\" class=\\"hide-tab end\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            max-width: 100%;
            vertical-align: middle;
            overflow: auto;
            display: flex;
            flex-direction: column;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: calc(3 * 5px);
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(-100%, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.6, 0.1, 1);
            font-size: calc(1 * 16px);
            --modal-wrapper-padding-left: calc(1.3125 * 16px);
            --modal-wrapper-padding-right: calc(1.3125 * 16px);
            padding: calc(1.3125 * 16px) var(--modal-wrapper-padding-right)
              calc(1.3125 * 16px) var(--modal-wrapper-padding-left);
            margin: 0 0 0 0;
          }
          .top,
          .bottom {
            width: 100%;
            height: auto;
          }
          .left,
          .right {
            width: auto;
            height: 100%;
          }
          .top {
            bottom: auto;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
          }
          .left {
            right: auto;
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }
          .bottom {
            top: auto;
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
          .right {
            left: auto;
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(-100%, 0, 0);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0, 0, 0);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0, 0, 0);
            transition: opacity, transform 400ms cubic-bezier(0.1, 0.2, 0.1, 1);
          }
          .wrapper-leave-active {
            opacity: 0.4;
            transform: translate3d(-100%, 0, 0);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div></div><style>
            .backdrop {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              overflow: auto;
              z-index: 1000;
              -webkit-overflow-scrolling: touch;
              box-sizing: border-box;
              text-align: center;
            }

            .content {
              position: relative;
              z-index: 1001;
              outline: none;
              max-width: 90%;
              width: 100%;
              margin: 20px auto;
              vertical-align: middle;
              display: inline-block;
            }

            .backdrop:before {
              display: inline-block;
              width: 0;
              height: 100%;
              vertical-align: middle;
              content: '';
            }

            .layer {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              width: 100%;
              height: 100%;
              opacity: 0.25;
              background-color: black;
              transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
              pointer-events: none;
              z-index: 1000;
            }

            .backdrop-wrapper-enter .layer {
              opacity: 0;
            }

            .backdrop-wrapper-enter-active .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave-active .layer {
              opacity: 0;
            }
          </style></div>"
`;
